--- a/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31">
         <activity
+            android:name=".Attendee_2"
+            android:exported="false" />
+        <activity
+            android:name=".Attendee_1"
+            android:exported="false" />
+        <activity
             android:name=".Organizer_2"
             android:exported="false" />
         <activity
