--- a/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31">
         <activity
+            android:name=".WelcomePage"
+            android:exported="false" />
+        <activity
             android:name=".Attendee_2"
             android:exported="false" />
         <activity
@@ -27,7 +30,6 @@
         <activity
             android:name=".RegistrationMain"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
