--- a/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31">
         <activity
+            android:name=".SelectionActivity"
+            android:exported="false" />
+        <activity
             android:name=".AdminActivity"
             android:exported="false" />
-
         <activity
             android:name=".WelcomePage"
             android:exported="false" />
