--- a/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".WelcomePage"
             android:exported="false" />
         <activity
+            android:name=".SignInPage"
+            android:exported="false" />
+        <activity
             android:name=".Attendee_2"
             android:exported="false" />
         <activity
