--- a/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31" >
+
+        <activity
+            android:name=".RejectAdminActivity"
+            android:exported="false" />
         <activity
             android:name=".Admin_SignIn_Activity"
             android:exported="false" />
