--- a/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31">
         <activity
-            android:name=".CreateEvent"
+            android:name=".Event_list_2"
             android:exported="false" />
         <activity
-            android:name=".EventList"
+            android:name=".CreateEvent"
             android:exported="false" />
         <activity
             android:name=".RejectAdminActivity"
