--- a/SEG Project V2/app/src/main/AndroidManifest.xml
+++ b/SEG Project V2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31">
         <activity
+            android:name=".OrganizerSeeAttendeeEventRequestsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AttendeeUpcomingEvent_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Event_list_2"
             android:exported="false" />
         <activity
