debugging my event button

--- a/SEG Project V2/app/src/main/AndroidManifest.xml
+++ b/SEG Project V2/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".OrganizerSeeAttendeeEventRequestsActivity"
             android:exported="false" />
         <activity
+            android:name=".Event_list_Attendee"
+            android:exported="false" />
+        <activity
             android:name=".AttendeeUpcomingEvent_Activity"
             android:exported="false" />
         <activity
