--- a/SEG Project V2/app/src/main/AndroidManifest.xml
+++ b/SEG Project V2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SEG_Project_D11"
         tools:targetApi="31">
         <activity
+            android:name=".SearchResultsActivity"
+            android:exported="false" />
+        <activity
             android:name=".OrganizerSeeAttendeeEventRequestsActivity"
             android:exported="false" />
         <activity
