--- a/SEG Project V2/app/src/main/AndroidManifest.xml
+++ b/SEG Project V2/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".AttendeeUpcomingEvent_Activity"
             android:exported="false" />
         <activity
-            android:name=".See_Events_Organizer"
+            android:name=".ViewEvents"
             android:exported="false" />
         <activity
             android:name=".CreateEvent"
